Make general style and content modifications to the site.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,22 @@
 	<meta charset="UTF-8">
 	<title>54bricks</title>
 	<link rel="stylesheet" href="css/style.css" media="all">
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,900' rel='stylesheet' type='text/css'>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<script>
-		$(function(){
-			$(".tooltip").tipTip();
-		});
-	</script>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,700,900' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Antic+Slab" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="page">
 		<div id="title">
+      <img src="https://avatars3.githubusercontent.com/u/3361967?s=250" alt="54bricks" class="logo">
 			<h1>54bricks</h1>
-            <a href="mailto:contact@54bricks.com">Contact us</a>
+      <p>We are a small web development shop based in
+      <a href="https://goo.gl/maps/vFNUJ">Copenhagen, Denmark</a>. We care about
+      craftsmanship, quality and solving complex problems with simple solutions.</p>
 		</div>
+    <div id="contact">
+      <a href="mailto:contact@54bricks.com" class="button">Get in touch</a>
+    </div>
 	</div>
 </body>
 </html>
